tests/paczka1/small_fuzzy/44686617.err
Error in line 2: Rd0cEt1 A908 5,6
Error in line 1: A838 S816 91,3
Error in line 3: fyHu S816 3,8
Error in line 4: Rd0cEt1 S977 10,1
Error in line 13: 8cuoqvW5R A908 97,8
